--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   adapter: postgresql
   username: root
   password: root
-  host: localhost
+  host: 127.0.0.1
   database: ABCEnglishBook
   encoding: UTF8
 
